# MuReNN-Tx

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  README.md  pyproject.toml
conf/: config.py  config.yaml
conf/data/: esc50_debug.yaml  generic_folder.yaml  tinysol_debug.yaml
conf/esc50/: base.yaml  cnn.yaml  mel_cnn.yaml  murenn2dcnn.yaml
conf/experiment/: esc50_debug.yaml  tinysol_debug.yaml
conf/model/: base.yaml
conf/optim/: base.yaml
conf/tinysol/: base.yaml  cnn.yaml  mel_cnn.yaml  murenn2dcnn.yaml  tx.yaml
conf/trainer/: trainer.yaml
logs/esc50_debug/version_10/: metrics.csv
logs/esc50_debug/version_11/: metrics.csv
logs/esc50_debug/version_12/: metrics.csv
logs/esc50_debug/version_13/: hparams.yaml  metrics.csv
logs/esc50_debug/version_5/: hparams.yaml
src/murenn-tx/: __init__.py
src/murenn-tx/modules/: frontend.py  local_transformer.py  tokenizers.py
src/murenn_tx/: __init__.py  train.py
src/murenn_tx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/murenn_tx/data/: esc50.py  registry.py  tinysol.py
src/murenn_tx/lightning/: datamodule.py  esc50_datamodule.py  lit_classifier.py  model.py  tinysol_datamodule.py
src/murenn_tx/models/: __init__.py  cnn.py  mel_cnn.py  murenn2dcnn.py  registry.py  tx.py
src/murenn_tx/modules/: cross_scale.py  frontend.py  fusion.py  local_transformer.py  model.py  tokenizers.py
src/murenn_tx/utils/: __init__.py  config_loader.py  pe.py
tests/: test_shapes.py  test_smoke.py
