[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murenn-tx"
version = "0.0.1"
description = "MuReNN‑Tx: Multi‑Resolution Neural Network with Transformers"
readme = "README.md"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
"torch>=2.1",
"torchaudio>=2.1",
"lightning>=2.3",
"hydra-core>=1.3",
"omegaconf>=2.3",
"numpy",
"scipy",
"soundfile",
"tqdm",
"rich",
]

[project.optional-dependencies]
dev = [
"pytest",
"pytest-cov",
"pre-commit",
"black",
"ruff",
"mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C4"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
